--- a/assets/sass/modules/_header.scss
+++ b/assets/sass/modules/_header.scss
@@ -18,6 +18,9 @@
 
   .main-header__content h1, .main-header__content h6 {
     color: $white!important;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+    -webkit-font-smoothing: antialiased;
+
   }
 
   ul.social {
