--- a/assets/sass/sassline-base/_layouts.scss
+++ b/assets/sass/sassline-base/_layouts.scss
@@ -69,11 +69,11 @@
     width: 33.333%;
 
     &:nth-of-type(3n+4) {
-      clear: left;
+      /*clear: left;*/
     }
 
     &:nth-of-type(n+4) {
-      margin-top: 3rem;
+      /*margin-top: 3rem;*/
     }
   }
 }
