--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,6 +265,14 @@ a {
       margin-bottom: -0.6179rem;
       padding-top: 0.6179rem; } }
 
+.typeset h3:before {
+  content: "";
+  display: block;
+  width: 1.5em;
+  height: .15em;
+  margin-bottom: .75em;
+  background: #2f404c; }
+
 .typeset ul, .typeset ol {
   line-height: 2rem;
   margin-bottom: 1.43999rem;
@@ -814,7 +822,7 @@ ul.unstyled span {
       padding-top: 0.6179rem; } }
 
 .main-header {
-  padding: 4em 0em;
+  padding: 3em 0em 4.2em 0em;
   background: linear-gradient(to top right, #0c3e5d, #2ec0ff);
   margin-bottom: 3rem; }
   .main-header svg {
@@ -827,31 +835,28 @@ ul.unstyled span {
     color: #FFFFFF !important;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     -webkit-font-smoothing: antialiased; }
-  .main-header ul.social {
-    margin-top: 1rem;
-    list-style: none; }
-  .main-header ul.social li {
-    margin-right: 0.5rem;
-    display: inline-block; }
 
-.global-footer p {
-  font-size: 1.19167rem;
-  color: #BDC8CC;
-  font-family: freight-sans-pro, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  padding: 1rem 0;
-  margin: 0;
-  text-align: center; }
-  @media screen and (min-width: 40em) {
-    .global-footer p {
-      font-size: 1.09286rem; } }
-  @media screen and (min-width: 50em) {
-    .global-footer p {
-      font-size: 1.08667rem; } }
-  @media screen and (min-width: 64em) {
-    .global-footer p {
-      font-size: 0.99412rem; } }
-  @media screen and (min-width: 100em) {
-    .global-footer p {
-      font-size: 0.92632rem; } }
+.global-footer {
+  background-color: #f8f8f8;
+  border-top: 1px solid #eee; }
+  .global-footer p {
+    font-size: 1.19167rem;
+    color: #9e9e9e;
+    font-family: freight-sans-pro, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    padding: 1rem 0;
+    margin: 0;
+    text-align: center; }
+    @media screen and (min-width: 40em) {
+      .global-footer p {
+        font-size: 1.09286rem; } }
+    @media screen and (min-width: 50em) {
+      .global-footer p {
+        font-size: 1.08667rem; } }
+    @media screen and (min-width: 64em) {
+      .global-footer p {
+        font-size: 0.99412rem; } }
+    @media screen and (min-width: 100em) {
+      .global-footer p {
+        font-size: 0.92632rem; } }
