--- a/assets/sass/modules/_footer.scss
+++ b/assets/sass/modules/_footer.scss
@@ -6,7 +6,7 @@
   p {
     @include fontsize(eta, all);
 
-    color: $captionColour;
+    color: #9e9e9e;
     font-family: unquote(map-get($headingtype, font-family));
     font-style: normal;
     font-weight: map-get($headingtype, regular);
@@ -14,4 +14,7 @@
     margin: 0;
     text-align: center;
   }
+
+  background-color: #f8f8f8;
+  border-top: 1px solid #eee;
 }
