--- a/assets/sass/modules/_header.scss
+++ b/assets/sass/modules/_header.scss
@@ -2,7 +2,7 @@
 // ---------------------------------------
 
 .main-header {
-  padding: 4em 0em;
+  padding: 3em 0em 4.2em 0em;
   background: linear-gradient(to top right, $headerColourDark,$headerColourLight);
   margin-bottom: 3rem;
 
@@ -21,16 +21,6 @@
     text-shadow: 0 1px 2px rgba(0, 0, 0, .2);
     -webkit-font-smoothing: antialiased;
 
-  }
-
-  ul.social {
-    margin-top: 1rem;
-    list-style: none;
-  }
-
-  ul.social li {
-    margin-right: 0.5rem;
-    display: inline-block;
   }
 
 }
