--- a/assets/sass/sassline-base/_typography.scss
+++ b/assets/sass/sassline-base/_typography.scss
@@ -80,6 +80,15 @@ a {
     @include sassline(zeta, $headingtype, 2, 0, all);
   }
 
+  h3:before {
+    content: "";
+    display: block;
+    width: 1.5em;
+    height: .15em;
+    margin-bottom: .75em;
+    background: $headingColour;
+  }
+
   // Lists.
   ul, ol {
     @include baseline(zeta, $bodytype, 2, 2, all);
