--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -845,7 +845,7 @@ ul.unstyled span {
     font-family: freight-sans-pro, sans-serif;
     font-style: normal;
     font-weight: 400;
-    padding: 1rem 0;
+    padding: 1.5rem;
     margin: 0;
     text-align: center; }
     @media screen and (min-width: 40em) {
