--- a/assets/sass/sassline-base/_variables.scss
+++ b/assets/sass/sassline-base/_variables.scss
@@ -82,7 +82,7 @@ $headingColour: #2f404c !default;
 $bodyColour: #8D959B !default;
 $linkColour: #186F9C !default;
 $hoverColour: #10587E !default;
-$captionColour: #BDC8CC !default;
+$captionColour: #8D959B !default;
 $white: #FFFFFF !default;
 
 // Background colours.
