--- a/assets/sass/modules/_header.scss
+++ b/assets/sass/modules/_header.scss
@@ -42,7 +42,12 @@
   }
 
   a {
-    font-size: 0.9rem;
+    @include breakpoint(break-1) {
+      font-size: 0.9rem;
+    }
+    @include breakpoint(break-4) {
+      font-size: 1.2rem;
+    }
   }
 
 }
