--- a/assets/sass/modules/_globals.scss
+++ b/assets/sass/modules/_globals.scss
@@ -44,13 +44,9 @@ ul.unstyled span {
   @include baseline(zeta, $headingtype, 2, 2, all);
 }
 
-.section a {
-     /*white-space: nowrap;*/
-}
-
 .section a:after {
-    content: ' \2192';
-    display: inline;
+    /*content: ' \2192';
+    display: inline;*/
 }
 
 p.caption a {
