--- a/assets/sass/sassline-base/_typography.scss
+++ b/assets/sass/sassline-base/_typography.scss
@@ -86,7 +86,7 @@ a {
     width: 1.5em;
     height: .11em;
     margin-bottom: .75em;
-    background: $headingColour;
+    background: $bodyColour;
   }
 
   // Lists.
