--- a/assets/sass/modules/_header.scss
+++ b/assets/sass/modules/_header.scss
@@ -17,7 +17,7 @@
   }
 
   .main-header__content h1, .main-header__content h2 {
-    color: $white!important;
+    color: $white;
     text-shadow: 0 1px 2px rgba(0, 0, 0, .2);
     -webkit-font-smoothing: antialiased;
 
