--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ html {
 
 body {
   font-size: 1.33333rem;
-  font-family: freight-sans-pro, sans-serif;
+  font-family: Open Sans, sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 2rem; }
@@ -73,11 +73,11 @@ body {
       font-size: 1.15789rem; } }
 
 a {
-  color: #186F9C;
+  color: #4A5FF0;
   text-decoration: none;
   transition: color .1s, background-color .1s; }
   a:hover, a:active, a:focus {
-    color: #10587E;
+    color: #2F40BB;
     text-decoration: none; }
 
 .typeset p {
@@ -104,7 +104,7 @@ a {
 
 .typeset h1, .typeset h2, .typeset h3, .typeset h4, .typeset h5, .typeset h6 {
   color: #2f404c;
-  font-family: freight-sans-pro, sans-serif;
+  font-family: Open Sans, sans-serif;
   font-feature-settings: 'dlig', 'liga', 'lnum', 'kern';
   font-style: normal;
   font-weight: 700; }
@@ -358,7 +358,7 @@ a {
   font-size: 1.19167rem;
   margin-bottom: -0.60676rem;
   padding-top: 0.60676rem;
-  font-family: freight-sans-pro, sans-serif;
+  font-family: Open Sans, sans-serif;
   font-feature-settings: 'liga', 'lnum', 'tnum', 'kern';
   font-style: normal;
   font-weight: 400;
@@ -418,7 +418,7 @@ a {
 
 .typeset small, .typeset .caption {
   font-size: 1.06667rem;
-  font-family: freight-sans-pro, sans-serif;
+  font-family: Open Sans, sans-serif;
   font-style: normal;
   font-weight: 400; }
   @media screen and (min-width: 40em) {
@@ -441,7 +441,7 @@ a {
   line-height: 2rem;
   margin-bottom: 1.35199rem;
   padding-top: 0.64801rem;
-  color: #8D959B; }
+  color: #9B9B9B; }
   @media screen and (min-width: 40em) {
     .typeset .caption {
       margin-bottom: 1.32056rem;
@@ -466,7 +466,7 @@ a {
   margin-top: 0rem; }
 
 .typeset blockquote p {
-  border-left: 0.15rem solid #186F9C;
+  border-left: 0.15rem solid #4A5FF0;
   font-style: italic;
   padding-left: 1rem;
   margin-bottom: 1.87999rem;
@@ -493,7 +493,7 @@ a {
     margin-left: -1rem; } }
 
 .typeset hr {
-  background-image: linear-gradient(to bottom, #eee 50%, #8D959B 50%);
+  background-image: linear-gradient(to bottom, #eee 50%, #9B9B9B 50%);
   background-position: 0 50%;
   background-repeat: repeat-x;
   background-size: 100% 0.15rem;
@@ -745,7 +745,7 @@ a {
 
 body {
   background-color: #FCFCFC;
-  color: #8D959B;
+  color: #747575;
   overflow-x: hidden; }
 
 .section {
@@ -814,11 +814,20 @@ ul.unstyled span {
       padding-top: 0.6179rem; } }
 
 .section a:after {
-  /*content: ' \2192';
-    display: inline;*/ }
+  content: ' \2192';
+  display: inline;
+  opacity: 0; }
+
+.section a:hover:after {
+  content: ' \2192';
+  display: inline;
+  opacity: 1;
+  transition: opacity .5s ease-in-out;
+  -moz-transition: opacity .5s ease-in-out;
+  -webkit-transition: opacity .5s ease-in-out; }
 
 p.caption a {
-  color: #8D959B;
+  color: #747575;
   text-decoration: underline; }
 
 p.caption a:after {
@@ -840,12 +849,13 @@ ul.social li {
   display: inline;
   margin: 0px 10px; }
 
-ul.social li a:after {
-  content: ''; }
+a.decoration-none:after, a.decoration-none:hover:after {
+  content: none; }
 
 .main-header {
   padding: 3em 0em 4.2em 0em;
-  background: linear-gradient(to top right, #0c3e5d, #2ec0ff);
+  background: linear-gradient(rgba(56, 88, 249, 0.9), rgba(56, 88, 249, 0.9)), url("../img/header-bg.jpg");
+  background-size: cover;
   margin-bottom: 3rem; }
   .main-header svg {
     float: left;
@@ -864,7 +874,7 @@ ul.social li a:after {
   .global-footer p {
     font-size: 1.19167rem;
     color: #9e9e9e;
-    font-family: freight-sans-pro, sans-serif;
+    font-family: Open Sans, sans-serif;
     font-style: normal;
     font-weight: 400;
     padding: 1.5rem;
