Fixing buttons for mobile safari.

--- a/assets/sass/modules/_footer.scss
+++ b/assets/sass/modules/_footer.scss
@@ -23,6 +23,7 @@
 
 #mc_embed_signup .button {
   background-color: $linkColour;
+  -webkit-appearance: none;
 }
 
 #mc_embed_signup .button:hover {
