--- a/assets/sass/modules/_footer.scss
+++ b/assets/sass/modules/_footer.scss
@@ -3,6 +3,15 @@
 
 .global-footer {
 
+@include breakpoint(break-0) {
+  .column--duo {
+    padding: 1.6em 0em;
+  }
+  #mc_embed_signup input.email {
+    width: 100%;
+  }
+  }
+
   p {
     @include fontsize(eta, all);
 
@@ -11,6 +20,7 @@
     font-style: normal;
     font-weight: map-get($headingtype, regular);
     margin: 0;
+    text-align: center;
   }
 
   background-color: #f8f8f8;
@@ -19,10 +29,6 @@
 #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;margin-top: 20px;}
 #mc_embed_signup form {
   text-align: left;
-}
-
-#mc_embed_signup input.email {
-  width: 300px;
 }
 
 #mc_embed_signup .button {
